apps/db/network.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-allow-backend
  namespace: homelab
spec:
  podSelector:
    matchLabels:
      app: postgres      # target: postgres pod
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend   # ONLY backend pods allowed
      ports:
        - protocol: TCP
          port: 5432
